// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`active ticket form renders the expected components 1`] = `
<div>
  <div>
    <form
      class="form "
      novalidate=""
    >
      <div
        class="container flexContainer desktop containerDesktop"
        data-testid="scroll-container"
        style="height: 550px;"
      >
        <div
          class="sc-bwzfXH jaHvNe"
        >
          <div
            class="sc-bxivhb sc-ifAKCX kPfswV"
          >
            <h1
              class="sc-htpNat jTlEqc"
              data-testid="widget-title"
            >
              message
            </h1>
            <button
              aria-label="Minimize"
              class="IconButton-x15t1e-0 sc-EHOje index__c-btn--icon___1Yl4x BqfmL Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
              data-garden-id="buttons.icon_button"
              data-garden-version="6.4.4"
              tabindex="0"
              type="button"
            >
              <svg
                class="index__c-btn__icon___3V0Rl"
                data-garden-id="buttons.icon"
                data-garden-version="6.4.4"
                data-testid="Icon--dash"
                realfilename="dash-fill.svg"
              />
            </button>
          </div>
        </div>
        <div
          class="content container ticketFormContainer"
          data-testid="scroll-container-content"
        >
          <div>
            <div
              class="formWrapper"
            >
              <h2
                class="ticketFormTitle "
              >
                Ticket Forms
              </h2>
              <label
                class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ lmNEmJ"
                data-garden-id="forms.text_label"
                data-garden-version="6.4.4"
                for="garden-field-container-18--input"
                id="garden-field-container-18--label"
              >
                <strong>
                  Your name
                </strong>
                 (optional)
              </label>
              <input
                aria-describedby="garden-field-container-18--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-18--label"
                class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                data-garden-id="forms.input"
                data-garden-version="6.4.4"
                data-testid="name-field"
                id="garden-field-container-18--input"
                name="name"
                value=""
              />
              <label
                class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ lmNEmJ"
                data-garden-id="forms.text_label"
                data-garden-version="6.4.4"
                for="garden-field-container-19--input"
                id="garden-field-container-19--label"
              >
                <strong>
                  Email address
                </strong>
              </label>
              <input
                aria-describedby="garden-field-container-19--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-19--label"
                class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                data-garden-id="forms.input"
                data-garden-version="6.4.4"
                data-testid="email-field"
                id="garden-field-container-19--input"
                name="email"
                pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
                required=""
                value=""
              />
              <div
                class=""
                data-testid="slide-appear-container"
                role="presentation"
                style="opacity: 1; bottom: 10px;"
              >
                <label
                  class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ lmNEmJ"
                  data-garden-id="forms.text_label"
                  data-garden-version="6.4.4"
                  for="garden-field-container-20--input"
                  id="garden-field-container-20--label"
                >
                  <strong>
                    Description
                  </strong>
                   (optional)
                </label>
                <input
                  aria-describedby="garden-field-container-20--hint"
                  aria-invalid="false"
                  aria-labelledby="garden-field-container-20--label"
                  aria-required="false"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="6.4.4"
                  id="garden-field-container-20--input"
                  label="Description"
                  name="1"
                  value=""
                />
              </div>
              <div
                class=""
                data-testid="slide-appear-container"
                role="presentation"
                style="opacity: 1; bottom: 10px;"
              >
                <label
                  class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ lmNEmJ"
                  data-garden-id="forms.text_label"
                  data-garden-version="6.4.4"
                  for="garden-field-container-21--input"
                  id="garden-field-container-21--label"
                >
                  <strong>
                    Subject
                  </strong>
                   (optional)
                </label>
                <input
                  aria-describedby="garden-field-container-21--hint"
                  aria-invalid="false"
                  aria-labelledby="garden-field-container-21--label"
                  aria-required="false"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="6.4.4"
                  id="garden-field-container-21--input"
                  label="Subject"
                  name="2"
                  value=""
                />
              </div>
              <div
                class=""
                data-testid="slide-appear-container"
                role="presentation"
                style="opacity: 1; bottom: 10px;"
              >
                <label
                  class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ lmNEmJ"
                  data-garden-id="forms.text_label"
                  data-garden-version="6.4.4"
                  for="garden-field-container-22--input"
                  id="garden-field-container-22--label"
                >
                  <strong>
                    Favorite Pizza
                  </strong>
                </label>
                <input
                  aria-describedby="garden-field-container-22--hint"
                  aria-invalid="false"
                  aria-labelledby="garden-field-container-22--label"
                  aria-required="true"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="6.4.4"
                  id="garden-field-container-22--input"
                  label="Favorite Pizza"
                  name="5"
                  required=""
                  value=""
                />
              </div>
              <span />
            </div>
          </div>
        </div>
        <footer
          class="footer  footerShadow"
          data-testid="scroll-container-footer"
        >
          <div
            class="container buttonRight buttonGroup"
          >
            <button
              class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe lcPfmb"
              data-garden-id="buttons.button"
              data-garden-version="6.4.4"
              data-testid="button-cancel"
              tabindex="0"
              type="button"
            >
              Cancel
            </button>
            <button
              class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--primary___1YOfW lcPfmb"
              data-garden-id="buttons.button"
              data-garden-version="6.4.4"
              data-testid="button-ok"
              tabindex="0"
              type="submit"
            >
              Send
            </button>
          </div>
        </footer>
      </div>
    </form>
    <a
      class="
      logo
      formSuccess
      
      
    "
      href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
      tabindex="-1"
      target="_blank"
    >
      <span
        class="container icon Icon--zendesk"
        data-testid="Icon--zendesk"
        type="Icon--zendesk"
      >
        <svg
          aria-hidden="true"
          realfilename="widget-icon_zendesk.svg"
        />
      </span>
      <span
        class="hidden"
      >
        zendesk
      </span>
    </a>
  </div>
</div>
`;

exports[`active ticket form renders the expected components in mobile form 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -6,7 +6,6 @@
      >
        <div
-         class="container flexContainer desktop containerDesktop"
+         class="container flexContainer mobile"
          data-testid="scroll-container"
-         style="height: 550px;"
        >
          <div
@@ -41,5 +40,5 @@
          </div>
          <div
-           class="content container ticketFormContainer"
+           class="content container ticketFormContainer containerMobile contentMobile"
            data-testid="scroll-container-content"
          >
@@ -49,5 +48,5 @@
              >
                <h2
-                 class="ticketFormTitle "
+                 class="ticketFormTitle ticketFormTitleMobile"
                >
                  Ticket Forms
@@ -57,6 +56,6 @@
                  data-garden-id="forms.text_label"
                  data-garden-version="6.4.4"
-                 for="garden-field-container-38--input"
-                 id="garden-field-container-38--label"
+                 for="garden-field-container-28--input"
+                 id="garden-field-container-28--label"
                >
                  <strong>
@@ -66,12 +65,12 @@
                </label>
                <input
-                 aria-describedby="garden-field-container-38--hint"
+                 aria-describedby="garden-field-container-28--hint"
                  aria-invalid="false"
-                 aria-labelledby="garden-field-container-38--label"
+                 aria-labelledby="garden-field-container-28--label"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="6.4.4"
                  data-testid="name-field"
-                 id="garden-field-container-38--input"
+                 id="garden-field-container-28--input"
                  name="name"
                  value=""
@@ -81,6 +80,6 @@
                  data-garden-id="forms.text_label"
                  data-garden-version="6.4.4"
-                 for="garden-field-container-39--input"
-                 id="garden-field-container-39--label"
+                 for="garden-field-container-29--input"
+                 id="garden-field-container-29--label"
                >
                  <strong>
@@ -89,12 +88,12 @@
                </label>
                <input
-                 aria-describedby="garden-field-container-39--hint"
+                 aria-describedby="garden-field-container-29--hint"
                  aria-invalid="false"
-                 aria-labelledby="garden-field-container-39--label"
+                 aria-labelledby="garden-field-container-29--label"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="6.4.4"
                  data-testid="email-field"
-                 id="garden-field-container-39--input"
+                 id="garden-field-container-29--input"
                  name="email"
                  pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
@@ -112,6 +111,6 @@
                    data-garden-id="forms.text_label"
                    data-garden-version="6.4.4"
-                   for="garden-field-container-40--input"
-                   id="garden-field-container-40--label"
+                   for="garden-field-container-30--input"
+                   id="garden-field-container-30--label"
                  >
                    <strong>
@@ -121,12 +120,12 @@
                  </label>
                  <input
-                   aria-describedby="garden-field-container-40--hint"
+                   aria-describedby="garden-field-container-30--hint"
                    aria-invalid="false"
-                   aria-labelledby="garden-field-container-40--label"
+                   aria-labelledby="garden-field-container-30--label"
                    aria-required="false"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="6.4.4"
-                   id="garden-field-container-40--input"
+                   id="garden-field-container-30--input"
                    label="Description"
                    name="1"
@@ -144,6 +143,6 @@
                    data-garden-id="forms.text_label"
                    data-garden-version="6.4.4"
-                   for="garden-field-container-41--input"
-                   id="garden-field-container-41--label"
+                   for="garden-field-container-31--input"
+                   id="garden-field-container-31--label"
                  >
                    <strong>
@@ -153,12 +152,12 @@
                  </label>
                  <input
-                   aria-describedby="garden-field-container-41--hint"
+                   aria-describedby="garden-field-container-31--hint"
                    aria-invalid="false"
-                   aria-labelledby="garden-field-container-41--label"
+                   aria-labelledby="garden-field-container-31--label"
                    aria-required="false"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="6.4.4"
-                   id="garden-field-container-41--input"
+                   id="garden-field-container-31--input"
                    label="Subject"
                    name="2"
@@ -176,6 +175,6 @@
                    data-garden-id="forms.text_label"
                    data-garden-version="6.4.4"
-                   for="garden-field-container-42--input"
-                   id="garden-field-container-42--label"
+                   for="garden-field-container-32--input"
+                   id="garden-field-container-32--label"
                  >
                    <strong>
@@ -184,12 +183,12 @@
                  </label>
                  <input
-                   aria-describedby="garden-field-container-42--hint"
+                   aria-describedby="garden-field-container-32--hint"
                    aria-invalid="false"
-                   aria-labelledby="garden-field-container-42--label"
+                   aria-labelledby="garden-field-container-32--label"
                    aria-required="true"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="6.4.4"
-                   id="garden-field-container-42--input"
+                   id="garden-field-container-32--input"
                    label="Favorite Pizza"
                    name="5"
@@ -208,15 +207,5 @@
            <div
              class="container buttonRight buttonGroup"
-           >
-             <button
-               class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe lcPfmb"
-               data-garden-id="buttons.button"
-               data-garden-version="6.4.4"
-               data-testid="button-cancel"
-               tabindex="0"
-               type="button"
            >
-               Cancel
-             </button>
              <button
                class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--primary___1YOfW lcPfmb"
`;

exports[`renders the expected components 1`] = `
<div>
  <div>
    <form
      class="form "
      novalidate=""
    >
      <div
        class="container flexContainer desktop containerDesktop"
        data-testid="scroll-container"
        style="height: 550px;"
      >
        <div
          class="sc-bwzfXH jaHvNe"
        >
          <div
            class="sc-bxivhb sc-ifAKCX kPfswV"
          >
            <h1
              class="sc-htpNat jTlEqc"
              data-testid="widget-title"
            >
              message
            </h1>
            <button
              aria-label="Minimize"
              class="IconButton-x15t1e-0 sc-EHOje index__c-btn--icon___1Yl4x BqfmL Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
              data-garden-id="buttons.icon_button"
              data-garden-version="6.4.4"
              tabindex="0"
              type="button"
            >
              <svg
                class="index__c-btn__icon___3V0Rl"
                data-garden-id="buttons.icon"
                data-garden-version="6.4.4"
                data-testid="Icon--dash"
                realfilename="dash-fill.svg"
              />
            </button>
          </div>
        </div>
        <div
          class="content container"
          data-testid="scroll-container-content"
        >
          <div>
            <div
              class="formWrapper"
            >
              <label
                class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ lmNEmJ"
                data-garden-id="forms.text_label"
                data-garden-version="6.4.4"
                for="garden-field-container-0--input"
                id="garden-field-container-0--label"
              >
                <strong>
                  Your name
                </strong>
                 (optional)
              </label>
              <input
                aria-describedby="garden-field-container-0--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-0--label"
                class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                data-garden-id="forms.input"
                data-garden-version="6.4.4"
                data-testid="name-field"
                id="garden-field-container-0--input"
                name="name"
                value=""
              />
              <label
                class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ lmNEmJ"
                data-garden-id="forms.text_label"
                data-garden-version="6.4.4"
                for="garden-field-container-1--input"
                id="garden-field-container-1--label"
              >
                <strong>
                  Email address
                </strong>
              </label>
              <input
                aria-describedby="garden-field-container-1--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-1--label"
                class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                data-garden-id="forms.input"
                data-garden-version="6.4.4"
                data-testid="email-field"
                id="garden-field-container-1--input"
                name="email"
                pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
                required=""
                value=""
              />
              <label
                class="StyledTextLabel-sc-1lq8qa5-0 text__c-txt__label___3wMPZ lmNEmJ"
                data-garden-id="forms.text_label"
                data-garden-version="6.4.4"
                for="garden-field-container-2--input"
                id="garden-field-container-2--label"
              >
                <strong>
                  How can we help you?
                </strong>
              </label>
              <textarea
                aria-describedby="garden-field-container-2--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-2--label"
                class="StyledTextInput-sc-1ezxcjx-0-textarea StyledTextarea-p4bofl-0 text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 ffjHNh"
                data-garden-id="forms.textarea"
                data-garden-version="6.4.4"
                data-testid="message-field"
                id="garden-field-container-2--input"
                name="description"
                required=""
                rows="5"
              />
              <span />
            </div>
          </div>
        </div>
        <footer
          class="footer  "
          data-testid="scroll-container-footer"
        >
          <div
            class="container buttonRight buttonGroup"
          >
            <button
              class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe lcPfmb"
              data-garden-id="buttons.button"
              data-garden-version="6.4.4"
              data-testid="button-cancel"
              tabindex="0"
              type="button"
            >
              Cancel
            </button>
            <button
              class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--primary___1YOfW lcPfmb"
              data-garden-id="buttons.button"
              data-garden-version="6.4.4"
              data-testid="button-ok"
              tabindex="0"
              type="submit"
            >
              Send
            </button>
          </div>
        </footer>
      </div>
    </form>
    <a
      class="
      logo
      formSuccess
      
      
    "
      href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
      tabindex="-1"
      target="_blank"
    >
      <span
        class="container icon Icon--zendesk"
        data-testid="Icon--zendesk"
        type="Icon--zendesk"
      >
        <svg
          aria-hidden="true"
          realfilename="widget-icon_zendesk.svg"
        />
      </span>
      <span
        class="hidden"
      >
        zendesk
      </span>
    </a>
  </div>
</div>
`;

exports[`renders the expected components in mobile mode 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -6,7 +6,6 @@
      >
        <div
-         class="container flexContainer desktop containerDesktop"
+         class="container flexContainer mobile"
          data-testid="scroll-container"
-         style="height: 550px;"
        >
          <div
@@ -41,5 +40,5 @@
          </div>
          <div
-           class="content container"
+           class="content container containerMobile contentMobile"
            data-testid="scroll-container-content"
          >
@@ -52,6 +51,6 @@
                  data-garden-id="forms.text_label"
                  data-garden-version="6.4.4"
-                 for="garden-field-container-12--input"
-                 id="garden-field-container-12--label"
+                 for="garden-field-container-6--input"
+                 id="garden-field-container-6--label"
                >
                  <strong>
@@ -61,12 +60,12 @@
                </label>
                <input
-                 aria-describedby="garden-field-container-12--hint"
+                 aria-describedby="garden-field-container-6--hint"
                  aria-invalid="false"
-                 aria-labelledby="garden-field-container-12--label"
+                 aria-labelledby="garden-field-container-6--label"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="6.4.4"
                  data-testid="name-field"
-                 id="garden-field-container-12--input"
+                 id="garden-field-container-6--input"
                  name="name"
                  value=""
@@ -76,6 +75,6 @@
                  data-garden-id="forms.text_label"
                  data-garden-version="6.4.4"
-                 for="garden-field-container-13--input"
-                 id="garden-field-container-13--label"
+                 for="garden-field-container-7--input"
+                 id="garden-field-container-7--label"
                >
                  <strong>
@@ -84,12 +83,12 @@
                </label>
                <input
-                 aria-describedby="garden-field-container-13--hint"
+                 aria-describedby="garden-field-container-7--hint"
                  aria-invalid="false"
-                 aria-labelledby="garden-field-container-13--label"
+                 aria-labelledby="garden-field-container-7--label"
                  class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                  data-garden-id="forms.input"
                  data-garden-version="6.4.4"
                  data-testid="email-field"
-                 id="garden-field-container-13--input"
+                 id="garden-field-container-7--input"
                  name="email"
                  pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
@@ -101,6 +100,6 @@
                  data-garden-id="forms.text_label"
                  data-garden-version="6.4.4"
-                 for="garden-field-container-14--input"
-                 id="garden-field-container-14--label"
+                 for="garden-field-container-8--input"
+                 id="garden-field-container-8--label"
                >
                  <strong>
@@ -109,12 +108,12 @@
                </label>
                <textarea
-                 aria-describedby="garden-field-container-14--hint"
+                 aria-describedby="garden-field-container-8--hint"
                  aria-invalid="false"
-                 aria-labelledby="garden-field-container-14--label"
+                 aria-labelledby="garden-field-container-8--label"
                  class="StyledTextInput-sc-1ezxcjx-0-textarea StyledTextarea-p4bofl-0 text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 ffjHNh"
                  data-garden-id="forms.textarea"
                  data-garden-version="6.4.4"
                  data-testid="message-field"
-                 id="garden-field-container-14--input"
+                 id="garden-field-container-8--input"
                  name="description"
                  required=""
@@ -132,14 +131,4 @@
              class="container buttonRight buttonGroup"
            >
-             <button
-               class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe lcPfmb"
-               data-garden-id="buttons.button"
-               data-garden-version="6.4.4"
-               data-testid="button-cancel"
-               tabindex="0"
-               type="button"
-             >
-               Cancel
-             </button>
              <button
                class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--primary___1YOfW lcPfmb"
`;

exports[`renders the loading bar content 1`] = `
<div>
  <div
    class="container flexContainer desktop containerDesktop"
    data-testid="scroll-container"
    style="height: 550px;"
  >
    <div
      class="sc-bwzfXH jaHvNe"
    >
      <div
        class="sc-bxivhb sc-ifAKCX kPfswV"
      >
        <h1
          class="sc-htpNat jTlEqc"
          data-testid="widget-title"
        >
          message
        </h1>
        <button
          aria-label="Minimize"
          class="IconButton-x15t1e-0 sc-EHOje index__c-btn--icon___1Yl4x BqfmL Button__StyledButton-sc-12lsl5w-0 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv lcPfmb"
          data-garden-id="buttons.icon_button"
          data-garden-version="6.4.4"
          tabindex="0"
          type="button"
        >
          <svg
            class="index__c-btn__icon___3V0Rl"
            data-garden-id="buttons.icon"
            data-garden-version="6.4.4"
            data-testid="Icon--dash"
            realfilename="dash-fill.svg"
          />
        </button>
      </div>
    </div>
    <div
      class="content ticketFormsContainer"
      data-testid="scroll-container-content"
    >
      <div>
        <div
          class="loadingBarContentContainer"
        >
          <div
            class="sc-dnqmqq cdmTkv Skeleton__StyledSkeleton-sc-1uuy18r-0 hvZKXb"
            data-garden-id="loaders.skeleton"
            data-garden-version="6.2.0"
          >
             
          </div>
          <div
            class="sc-dnqmqq cdmTkv Skeleton__StyledSkeleton-sc-1uuy18r-0 fpTiEf"
            data-garden-id="loaders.skeleton"
            data-garden-version="6.2.0"
          >
             
          </div>
          <div
            class="sc-dnqmqq cdmTkv Skeleton__StyledSkeleton-sc-1uuy18r-0 fpTiEf"
            data-garden-id="loaders.skeleton"
            data-garden-version="6.2.0"
          >
             
          </div>
          <div
            class="sc-dnqmqq cdmTkv Skeleton__StyledSkeleton-sc-1uuy18r-0 fpTiEf"
            data-garden-id="loaders.skeleton"
            data-garden-version="6.2.0"
          >
             
          </div>
          <div
            class="sc-dnqmqq cdmTkv Skeleton__StyledSkeleton-sc-1uuy18r-0 fpTiEf"
            data-garden-id="loaders.skeleton"
            data-garden-version="6.2.0"
          >
             
          </div>
        </div>
      </div>
    </div>
    <footer
      class="footer  "
      data-testid="scroll-container-footer"
    />
  </div>
  <a
    class="
      logo
      formSuccess
      
      
    "
    href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
    tabindex="-1"
    target="_blank"
  >
    <span
      class="container icon Icon--zendesk"
      data-testid="Icon--zendesk"
      type="Icon--zendesk"
    >
      <svg
        aria-hidden="true"
        realfilename="widget-icon_zendesk.svg"
      />
    </span>
    <span
      class="hidden"
    >
      zendesk
    </span>
  </a>
</div>
`;
